--- a/Index.html
+++ b/Index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" type="text/css" href="css/styles.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 <title>Edible Eats</title>
-<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
