--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 <title>Edible Eats</title>
+	<link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
