--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, style-src 'self' https://github.com 'unsafe-inline';
-">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Edible Eats</title>
 	<link rel="stylesheet" href="css/styles.css">
