--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-	<Content-Security-Policy: allow 'self'; img-src data: github.io>
+	<Content-Security-Policy: allow 'self'; default-src data: github.io>
 	<h1>Edible Eats</h1>
 </header>
 
