--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, Content-Security-Policy: allow 'self', img-src data: github.io">
 
 <title>Edible Eats</title>
 	<link rel="stylesheet" href="css/styles.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-	<Content-Security-Policy: allow 'self'; img-src data: github.io>
+	
 	<h1>Edible Eats</h1>
 </header>
 
